Resave glade files to drop gtk2 bits

--- a/src/vmm-about.ui
+++ b/src/vmm-about.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="2.16"/>
+  <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkAboutDialog" id="vmm-about">
     <property name="can_focus">False</property>
     <property name="destroy_with_parent">True</property>
