--- a/src/vmm-progress.ui
+++ b/src/vmm-progress.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="2.16"/>
+  <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkWindow" id="vmm-progress">
     <property name="can_focus">False</property>
     <property name="border_width">12</property>
@@ -152,7 +152,6 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <property name="use_action_appearance">False</property>
                     <property name="use_stock">True</property>
                     <signal name="clicked" handler="on_async_job_cancel_clicked" swapped="no"/>
                   </object>
